# smart-grind-by-weight

./: .gitignore  CLAUDE.md  CMakeLists.txt  idf_component.yml  platformio.ini  sdkconfig.defaults  sdkconfig.waveshare-esp32s3-touch-amoled-164
components/delta/: CMakeLists.txt
components/detools/: CMakeLists.txt
include/: arduino_compat.h  ble_compat.h  littlefs_idf.h  lv_conf.h  preferences_idf.h
main/: CMakeLists.txt  idf_component.yml
src/: ble_compat.cpp  idf_component.yml  main.cpp
src/bluetooth/: data_stream.cpp  data_stream.h  manager.cpp  manager.h  ota_handler.cpp  ota_handler.h
src/config/: build_info.h  grind_control.h  hardware.h  logging.h  system.h
src/controllers/: autotune_controller.cpp  autotune_controller.h  calibrated_time_grind_strategy.cpp  calibrated_time_grind_strategy.h  grind_controller.cpp  grind_controller.h  grind_events.h  grind_mode.h  grind_mode_traits.cpp  grind_mode_traits.h  manual_grind_strategy.cpp  manual_grind_strategy.h  profile_controller.cpp  profile_controller.h  single_auto_grind_strategy.cpp  single_auto_grind_strategy.h  time_grind_strategy.cpp  weight_grind_strategy.cpp
src/hardware/: WeightSensor.cpp  WeightSensor.h  display_manager.cpp  display_manager.h  grinder.cpp  grinder.h  hardware_manager.cpp  hardware_manager.h  hx711_driver.cpp  hx711_driver.h  littlefs_idf.cpp  load_cell_driver.h  lv_mem_core_psram.cpp  mock_hx711_driver.cpp  mock_hx711_driver.h  touch_driver.cpp
src/hardware/circular_buffer_math/: circular_buffer_math.h
src/logging/: grind_logging.cpp  grind_logging.h
src/system/: diagnostics_controller.h  performance_monitor.h  state_machine.cpp  statistics_manager.cpp  statistics_manager.h  task_scheduler.h
src/tasks/: file_io_task.cpp  grind_control_task.cpp  task_manager.cpp  weight_sampling_task.cpp  weight_sampling_task.h
src/ui/: event_bridge_lvgl.h  ui_helpers.cpp  ui_manager.cpp  ui_manager.h
src/ui/components/: blocking_overlay.cpp  ui_operations.cpp
src/ui/controllers/: autotune_controller.cpp  calibration_controller.cpp  grinding_controller.cpp  grinding_controller.h  jog_adjust_controller.cpp  menu_controller.cpp  menu_controller.h  ota_data_export_controller.cpp  ready_controller.cpp  ready_controller.h  screen_timeout_controller.cpp  screen_timeout_controller.h
src/ui/screens/: autotune_screen.cpp  calibration_screen.cpp  confirm_screen.cpp  edit_screen.cpp  grinding_screen.cpp  grinding_screen.h  grinding_screen_arc.cpp  grinding_screen_chart.cpp  menu_screen.cpp  menu_screen.h  nyan_cat_screensaver.cpp  nyan_cat_screensaver.h  ota_screen.cpp  ota_update_failed_screen.cpp  purge_confirm_screen.cpp  ready_screen.cpp  ready_screen.h
tools/: grinder.py  requirements.txt
tools/build-scripts/: pre_build.py
